[package]
name = "poker-cash-game-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poker_cash_game_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.28.0", features=["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.14"